--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
           <li><a href="#"><img src="./images/yelp.png" alt="firm5"></a></li>
           <li><a href="#"><img src="./images/daimer.png" alt="firm6"></a></li>
         </ul>
+        <!--=======tablet===========-->
+        <div class="tablet__s2-menues">
+
+          <ul class="tablet__s2-menu">
+            <li><a href="#"><img src="./images/spe.png" alt="firm1"></a></li>
+            <li><a href="#"><img src="./images/virgin.png" alt="firm2"></a></li>
+            <li><a href="#"><img src="./images/tidal.png" alt="firm3"></a></li>
+          </ul>
+
+          <ul class="tablet__s2-menu">
+            <li><a href="#"><img src="./images/revolut.png" alt="firm4"></a></li>
+            <li><a href="#"><img src="./images/yelp.png" alt="firm5"></a></li>
+            <li><a href="#"><img src="./images/daimer.png" alt="firm6"></a></li>
+          </ul>
+
+        </div>
+        <!--=======tablet===========-->
 
       </div>
 
@@ -125,7 +142,7 @@
 
           </div>
 
-          <div>
+          <div class="tablet-articles-img">
 
             <img class="articles-imgs" src="./images/card1.png" alt="card1" width="632">
 
@@ -137,7 +154,9 @@
 
           <div class="section3__box2">
 
-            <h2 class="title mb30">Shorten time<br> to market</h2>
+            <h2 class="s3__box2__title-pc title mb30">Shorten time<br> to market</h2>
+
+            <h2 class="s3__box2__title-tablet title mb30">Shorten time to market</h2>
 
             <p class="subtitle mb30">
               Localize your product in parallel with the development cycle. Use the <a class="container3__special-link"
@@ -150,7 +169,7 @@
 
           </div>
 
-          <div>
+          <div class="tablet-articles-img">
 
             <img class="articles-imgs" src="./images/card2.png" alt="card2" width="632">
 
@@ -177,7 +196,7 @@
 
           </div>
 
-          <div>
+          <div class="tablet-articles-img">
 
             <img class="articles-imgs" src="./images/card3.png" alt="card3" width="632">
 
@@ -204,7 +223,7 @@
 
           </div>
 
-          <div class="box__card4">
+          <div class="tablet-articles-img box__card4">
 
             <img class="articles-imgs" src="./images/card4.png" alt="card4" width="632">
 
@@ -303,12 +322,12 @@
 
       <div class="container">
 
-        <h2 class="title">Boost your localization team’s productivity tenfold</h2>
+        <h2 class="s5__title-tablet title">Boost your localization team’s productivity tenfold</h2>
 
         <ul class="section5__menu ul">
           <!--============================================================-->
           <li class="section5__menu-item">
-            <img src="./images/section5/managers.png" alt="icon1">
+            <img class="s5__menu-imgs" src="./images/section5/managers.png" alt="icon1">
             <h3 class="section5__menu-title  s5s1">Managers</h3>
             <p class="subtitle">
               Update existing and launch new features and products while simultaneously localizing them in multiple
@@ -319,7 +338,7 @@
           </li>
           <!--============================================================-->
           <li class="section5__menu-item">
-            <img src="./images/section5/developers.png" alt="icon2">
+            <img class="s5__menu-imgs" src="./images/section5/developers.png" alt="icon2">
             <h3 class="section5__menu-title  s5s2">Developers</h3>
             <p class="subtitle">
               Set up an integration with your code repository or your own custom SDK via Lokalise's <a
@@ -331,7 +350,7 @@
           </li>
           <!--============================================================-->
           <li class="section5__menu-item">
-            <img src="./images/section5/translators.png" alt="icon3">
+            <img class="s5__menu-imgs" src="./images/section5/translators.png" alt="icon3">
             <h3 class="section5__menu-title  s5s3">Translators</h3>
             <p class="subtitle">
               Eliminate double-work and neverending revisions with visual context (screenshots) and live previews.
@@ -391,7 +410,7 @@
 
           <div class="section7__block-left">
 
-            <div>
+            <div class="s7__block-left-tablet">
               <img class="s7__icon-cake" src="./images/section7/cake.svg" alt="icon">
             </div>
 
@@ -401,9 +420,9 @@
 
           <div class="section7__block-right">
 
-            <img class="s7block-right-image1" src="./images/section7/g2.svg" alt="icon1">
+            <img class="s7-images s7block-right-image1" src="./images/section7/g2.svg" alt="icon1">
 
-            <img class="s7block-right-image2" src="./images/section7/capterra.svg" alt="icon2">
+            <img class="s7-images s7block-right-image2" src="./images/section7/capterra.svg" alt="icon2">
 
           </div>
 
@@ -424,7 +443,9 @@
 
           <p class="section8__subtitle">Automate processes, eliminate routine tasks, and track progress with ease.</p>
 
-          <img class="section8__art1-img" src="./images/pic1023.png" alt="picture" width="1023">
+          <div class="s8__art1-img">
+            <img class="section8__art1-img" src="./images/pic1023.png" alt="picture" width="1023">
+          </div>
 
           <button class="section8__art1-btn btn btn-type2" type="button">See all integrations</button>
 
@@ -462,7 +483,9 @@
 
           <h3 class="section10__title">Case Studies</h3>
 
-          <img class="articles-img" src="./images/bikes.png" alt="picture of bikes">
+          <div class="s10__bikes-img">
+            <img class="articles-img" src="./images/bikes.png" alt="picture of bikes">
+          </div>
 
           <img class="section10__img2" src="./images/spe.png" alt="logo1">
 
@@ -538,11 +561,13 @@
   <!---------------------------------<FOOTER>------------------------------------------->
   <footer>
 
-    <div class="container footer">
+    <div class="container footer pc__footer">
 
       <div class="footer__left">
 
-        <img class="footer__img" src="./images/logo_simple.png" alt="logotype">
+        <div>
+          <img class="footer__img" src="./images/logo_simple.png" alt="logotype">
+        </div>
 
         <p class="footer__sub footer__left-sub">Localization workflow for your web and mobile apps, games and digital
           content.</p>
@@ -556,6 +581,20 @@
         <p class="footer__sub">All rights reserved.</p>
 
       </div>
+
+    </div>
+    <!--======================TABLET ONLY=================-->
+
+    <div class="container footer tablet__footer">
+
+      <div>
+        <img class="footer__img" src="./images/logo_simple.png" alt="logotype">
+      </div>
+
+      <p class="tablet__footer-sub1 footer__sub footer__left-sub">Localization workflow for your web and mobile apps, games and digital
+        content.</p>
+
+      <p class="tablet__footer-sub2 footer__sub">©2001-2020 All rights reserved.</p>
 
     </div>
 
